--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Install Dependencies
               run: npm install
             - name: Run script
-              run: npm run build
+              run: npm run build && npm run prettier
 
             - name: Automatically Commit Changed
               uses: stefanzweifel/git-auto-commit-action@v4
