--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
 	"description": "",
 	"main": "RPCPcStatus.plugin.js",
 	"scripts": {
-		"dev": "bdbuilder --plugin=./devlop --copy=./builds --watch --production",
+		"dev": "bdbuilder --plugin=./devlop -watch --production",
 		"fix": "eslint . --fix",
 		"lint": "eslint .",
 		"build": "node ./script/releases.js",
-		"build:pre-release": "npm run npm-install && bdbuilder --plugin=./devlop --copy=./builds --production",
+		"build:pre-release": "npm run npm-install && bdbuilder --plugin=./devlop --production",
 		"npm-install": "cd ./plugins/devlop && npm i",
 		"prettier": "prettier --config .prettierrc --write .",
 		"script:auth": "node ./script/authentication.js",
-		"publish": "node ./script/releases.js && npm run npm-install && bdbuilder --plugin=./devlop --copy=./builds --production && npm run prettier"
+		"publish": "node ./script/releases.js && npm run npm-install && bdbuilder --plugin=./devlop  && npm run prettier"
 	},
 	"repository": {
 		"type": "git",
