--- a/.github/workflows/PrettifiedCode.yml
+++ b/.github/workflows/PrettifiedCode.yml
@@ -1,11 +1,13 @@
 name: Code Formatter
 
 on:
+    pull_request:
     push:
         branches:
             - master
         paths-ignore:
             - "**.yml"
+            - "**.md"
 
 env:
     NPM_USER: ${{ secrets.NPM_USER }}
@@ -18,6 +20,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v2
+              with:
+                  ref: ${{ github.head_ref }}
 
             - name: Setup Node
               uses: actions/setup-node@v3
