Add ignore .json

--- a/.github/workflows/PrettifiedCode.yml
+++ b/.github/workflows/PrettifiedCode.yml
@@ -8,6 +8,8 @@ on:
         paths-ignore:
             - "**.yml"
             - "**.md"
+            - "**.json"
+            
 
 env:
     NPM_USER: ${{ secrets.NPM_USER }}
