--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -2,9 +2,9 @@ name: Publish
 
 on:
     workflow_dispatch:
-#     push:
-#         tags:
-#             - "v*"
+    push:
+        tags:
+            - "v*"
 env:
     NPM_USER: ${{ secrets.NPM_USER }}
     NPM_PASS: ${{ secrets.NPM_PASS }}
@@ -16,6 +16,8 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
+              with:
+                  ref: ${{ github.head_ref }}
 
             - name: Setup Node
               uses: actions/setup-node@v3
