--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"prettier": "^2.6.2"
 	},
 	"devDependencies": {
+		"edit-json-file": "^1.7.0",
 		"@betterdiscordbuilder/bdbuilder": "^1.2.22",
 		"eslint": "^8.16.0",
 		"eslint-plugin-prettier": "^4.0.0"
