--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -6,17 +6,17 @@ on:
             version:
                 type: string
                 required: false
-                description: Version bump
+                description: Version bump (Replace package.json)
             releases:
                 type: choice
                 description: Releases
                 options:
                     - Stable
                     - Devlop (Pre-release)
-
 #     push:
 #         tags:
 #             - "v*"
+
 env:
     version_publish: ${{ github.event.inputs.version }}
     releases_publish: ${{ github.event.inputs.releases }}
