--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -28,7 +28,7 @@ jobs:
     main:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout code
+            - name: Checkout
               uses: actions/checkout@v2
               with:
                   ref: ${{ github.head_ref }}
@@ -64,6 +64,12 @@ jobs:
                   commit_author: GitHub Actions <actions@github.com>
                   skip_checkout: true
 
+            - name: Create Tag
+              uses: Klemensas/action-autotag@stable
+              with:
+                  GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+                  tag_prefix: "v"
+                  
             - name: Create Release
               id: create_release
               uses: actions/create-release@v1
