--- a/.github/workflows/prettified_code.yml
+++ b/.github/workflows/prettified_code.yml
@@ -1,35 +1,17 @@
-name: Publish
+name: Code Formatter
 
 on:
-    workflow_dispatch:
-        inputs:
-            version:
-                type: string
-                required: false
-                description: Version (Replace package.json) e.g. "1.0.0"
-            releases:
-                type: choice
-                description: Releases
-                options:
-                    - Stable
-                    - Devlop (Pre-release)
-            prerelease:
-                description: "Create Release Release pre-release"
-                required: false
-                type: boolean
-#     push:
-#         tags:
-#             - "v*"
-
-env:
-    version_publish: ${{ github.event.inputs.version }}
-    releases_publish: ${{ github.event.inputs.releases }}
-    NPM_USER: ${{ secrets.NPM_USER }}
-    NPM_PASS: ${{ secrets.NPM_PASS }}
-    NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
+    pull_request:
+    push:
+        branches:
+            - main
+        paths-ignore:
+            - "**.yml"
+            - "**.md"
+            - "**.json"
 
 jobs:
-    Build:
+    main:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -42,64 +24,18 @@ jobs:
               with:
                   node-version: "16"
 
-            - name: Login to GitHub Private NPM Registry
-              shell: bash
-              run: |
-                  npm install -g npm-cli-login
-                  npm-cli-login -u $NPM_USER -p $NPM_PASS -e "$NPM_EMAIL" -r "https://npm.pkg.github.com" -s "@betterdiscordbuilder"
-
             - name: Install Dependencies
-              run: npm install
-            - name: Run Publish
-              run: npm run publish
-
-            - name: Extract version
-              id: extract_version
-              uses: Saionaro/extract-package-version@v1.0.6
+              run: npm install -g prettier@2.6.2
+            - name: Run Prettier
+              run: npm run prettier
 
             - name: Automatically Commit Changed
               uses: stefanzweifel/git-auto-commit-action@v4
               with:
                   push_options: "--force"
                   commit_options: "--no-verify"
-                  commit_message: "New Releases ${{ steps.extract_version.outputs.version }}"
+                  commit_message: "Prettified Code!"
                   commit_user_name: GitHub Actions
                   commit_user_email: actions@github.com
                   commit_author: GitHub Actions <actions@github.com>
                   skip_checkout: true
-
-    Release:
-        needs: Build
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-              with:
-                  ref: ${{ github.head_ref }}
-
-            - name: Extract version
-              id: extract_version
-              uses: Saionaro/extract-package-version@v1.0.6
-
-            - name: Create Release
-              id: create_release
-              uses: actions/create-release@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  tag_name: v${{ steps.extract_version.outputs.version }}
-                  release_name: ${{ steps.extract_version.outputs.version }}
-                  body: ${{ steps.build_changelog.outputs.changelog }}
-                  draft: false
-                  prerelease: ${{ github.event.inputs.prerelease || false }}
-
-            - name: Upload Release Asset
-              id: upload-release-asset
-              uses: actions/upload-release-asset@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: ./RPCPcStatus.plugin.js
-                  asset_name: RPCPcStatus.plugin.js
-                  asset_content_type: text/javascript
