Add inputs pre-release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,10 @@ on:
                 options:
                     - Stable
                     - Devlop (Pre-release)
+            prerelease:
+                description: "Create Release Release pre-release"
+                required: false
+                type: boolean
 #     push:
 #         tags:
 #             - "v*"
@@ -87,7 +91,7 @@ jobs:
                   release_name: ${{ steps.extract_version.outputs.version }}
                   body: ${{ steps.build_changelog.outputs.changelog }}
                   draft: false
-                  prerelease: false
+                  prerelease: ${{ github.event.inputs.prerelease || false }}
 
             - name: Upload Release Asset
               id: upload-release-asset
