--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
             version:
                 type: string
                 required: true
-                description: Version (Replace package.json) e.g. "1.0.0"
+                description: Version e.g. "1.0.0"
             releases:
                 type: choice
                 description: Releases
