--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,7 +50,7 @@ jobs:
               run: |
                 git config --local user.email "actions@github.com"
                 git config --local user.name "GitHub Actions"
-                npm version $bumpversion -m "New Releases %s"
+                npm version $bumpversion -m "Bump version %s"
 
             - name: Login to GitHub Private NPM Registry
               shell: bash
