--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,10 +48,10 @@ jobs:
             - name: Bump a package version
               if: ${{ github.event.inputs.bumpversion }}
               run: |
-                git config --local user.email "actions@github.com"
-                git config --local user.name "GitHub Actions"
-                npm config set git-tag-version false
-                npm version $bumpversion -m "New Releases %s"
+                  git config --local user.email "actions@github.com"
+                  git config --local user.name "GitHub Actions"
+                  npm config set git-tag-version false
+                  npm version $bumpversion -m "New Releases %s"
 
             - name: Login to GitHub Private NPM Registry
               shell: bash
@@ -98,7 +98,7 @@ jobs:
                   asset_content_type: text/javascript
 
             - name: Automatically Commit Changed
-              if: steps.upload_release_asset.outcome == 'success'
+              if: ${{ (steps.upload_release_asset.outcome == 'success') && (github.event.inputs.prerelease != true) }}
               uses: stefanzweifel/git-auto-commit-action@v4
               with:
                   push_options: "--force"
