--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -24,7 +24,7 @@ jobs:
                   node-version: "16"
 
             - name: Install Dependencies
-              run: npm install -g --force
+              run: npm install -g --dev
             - name: Run ESLint
               run: npm run fix
 
