--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
 	"main": "RPCPcStatus.plugin.js",
 	"scripts": {
 		"dev": "bdbuilder --plugin=./devlop --watch --production",
-		"fix": "eslint . --debug --fix",
-		"lint": "eslint .",
+		"fix": "eslint . --config .eslintrc.js --debug --fix",
+		"lint": "eslint . --config .eslintrc.js",
 		"build": "node ./script/releases.js",
 		"build:pre-release": "npm run npm-install && bdbuilder --plugin=./devlop --production",
 		"npm-install": "cd ./plugins/devlop && npm i",
 		"prettier": "prettier --config .prettierrc --write .",
 		"script:auth": "node ./script/authentication.js",
-		"script:publish_stable": "node ./script/releases.js && npm run npm-install && bdbuilder --plugin=./devlop --production && eslint ./RPCPcStatus.plugin.js --debug --fix"
+		"script:publish_stable": "node ./script/releases.js && npm run npm-install && bdbuilder --plugin=./devlop --production && eslint ./RPCPcStatus.plugin.js --config .eslintrc.js --debug --fix"
 	},
 	"repository": {
 		"type": "git",
