--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -8,7 +8,11 @@ on:
             - main
         paths:
             - '**.js'
-
+env:
+    NPM_USER: ${{ secrets.NPM_USER }}
+    NPM_PASS: ${{ secrets.NPM_PASS }}
+    NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
+    
 jobs:
     main:
         runs-on: ubuntu-latest
@@ -23,8 +27,14 @@ jobs:
               with:
                   node-version: "16"
 
+            - name: Login to GitHub Private NPM Registry
+              shell: bash
+              run: |
+                  npm install -g npm-cli-login
+                  npm-cli-login -u $NPM_USER -p $NPM_PASS -e "$NPM_EMAIL" -r "https://npm.pkg.github.com" -s "@betterdiscordbuilder"
+
             - name: Install Dependencies
-              run: npm install -g eslint@8.16.0 prettier@2.6.2 eslint-plugin-prettier@latest eslint-plugin-no-one-time-vars@2.4.1 --save-dev
+              run: npm install --force
             - name: Run ESLint
               run: npm run fix
 
