--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"script:auth": "node ./script/authentication.js",
 		"script:releases": "node ./script/releases.js",
 		"script:publish_stable": "npm run script:releases && npm run npm-install && npm run prettier && npm run build && eslint ./RPCPcStatus.plugin.js --config .eslintrc.js --debug --fix",
-		"script:publish_prerelease": "npm run npm-install && npm run prettier && npm run build_dev && bump prerelease packagedev.json RPCPcStatus.devlop.js && eslint ./RPCPcStatus.devlop.js --config .eslintrc.js --debug --fix"
+		"script:publish_prerelease": "npm run npm-install && npm run prettier && npm run build_dev && eslint ./RPCPcStatus.devlop.js --config .eslintrc.js --debug --fix"
 	},
 	"repository": {
 		"type": "git",
