--- a/.github/workflows/publish_pre_release.yml
+++ b/.github/workflows/publish_pre_release.yml
@@ -44,19 +44,19 @@ jobs:
               run: npm run script:publish_prerelease
 
             - name: Bump prerelease
-              if: ${{ env.bumprelease == "prerelease" }}
+              if: ${{ env.bumprelease == 'prerelease' }}
               run: bump prerelease packagedev.json RPCPcStatus.devlop.js
 
             - name: Bump prepatch
-              if: ${{ env.bumprelease == "prepatch" }}
+              if: ${{ env.bumprelease == 'prepatch' }}
               run: bump prepatch packagedev.json RPCPcStatus.devlop.js
 
             - name: Bump preminor
-              if: ${{ env.bumprelease == "preminor" }}
+              if: ${{ env.bumprelease == 'preminor' }}
               run: bump preminor packagedev.json RPCPcStatus.devlop.js
 
             - name: Bump premajor
-              if: ${{ env.bumprelease == "premajor" }}
+              if: ${{ env.bumprelease == 'premajor' }}
               run: bump premajor packagedev.json RPCPcStatus.devlop.js
 
             - uses: nyaa8/package-version@v1
