--- a/.github/workflows/publish_pre_release.yml
+++ b/.github/workflows/publish_pre_release.yml
@@ -65,7 +65,7 @@ jobs:
               with:
                   tag_name: v${{ env.PACKAGE_VERSION }}
                   release_name: ${{ env.PACKAGE_VERSION }}
-                  body: "##### $bumprelease"
+                  body: "##### ${{ github.event.inputs.bumprelease }}"
                   draft: false
                   prerelease: true
 
