--- a/.github/workflows/publish_pre_release.yml
+++ b/.github/workflows/publish_pre_release.yml
@@ -41,7 +41,7 @@ jobs:
 
     main:
         needs: check_date
-        if: ${{ needs.check_date.outputs.should_run != 'false' }
+        if: ${{ needs.check_date.outputs.should_run != 'false' }}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
